--- a/CH_1_Props_Children_Multiple_Elements/src/index.html
+++ b/CH_1_Props_Children_Multiple_Elements/src/index.html
@@ -4,7 +4,7 @@
 
   <head>
     <meta charset="UTF-8">
-    <title>React Tutorial - Hello World!!!</title>
+    <title>React Tutorial - Props, Children and multiple elements!!!</title>
   </head>
 
   <body>
