--- a/CH_3_States/src/index.html
+++ b/CH_3_States/src/index.html
@@ -4,7 +4,7 @@
 
   <head>
     <meta charset="UTF-8">
-    <title>React Tutorial - Props, Children and multiple elements!!!</title>
+    <title>React Tutorial - State</title>
   </head>
 
   <body>
